--- a/prepros-6.config
+++ b/prepros-6.config
@@ -24,17 +24,20 @@
       "path": "scss/style.scss",
       "imports": [
         "scss/_variables.scss",
-        "scss/_search-block.scss",
+        "scss/_padding-100-0.scss",
+        "scss/_container.scss",
+        "scss/_close-btn.scss",
+        "scss/_search.scss",
         "scss/_button.scss",
+        "scss/_navigation.scss",
         "scss/_mobile-nav.scss",
         "scss/_header.scss",
         "scss/_products-main.scss",
         "scss/_newsteller.scss",
         "scss/_footer.scss",
-        "scss/_scroll-up.scss",
         "scss/_active-link.scss",
-        "scss/_visible.scss",
-        "scss/_footer-nav-show.scss"
+        "scss/_scroll-up.scss",
+        "scss/_visible.scss"
       ]
     }
   ],
@@ -80,7 +83,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7888,
+    "port": 7889,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
